--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 plugins {
     id "java"
     id "com.github.johnrengelman.shadow" version "6.1.0"
@@ -14,6 +16,15 @@ shadowJar {
 repositories {
     mavenCentral()
     maven { url "https://repo.jaims.dev/repository/all" }
+}
+
+processResources {
+    with copySpec {
+        from "src/main/resources"
+        filter(ReplaceTokens, tokens: [
+                version: project.version
+        ])
+    }
 }
 
 dependencies {
