add command and permission

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,9 @@
 name: TerriblePlugin
 version: @version@
 main: dev.jaims.terribleplugin.Main
+permissions:
+  terribleplugin.permission:
+    default: true
+commands:
+  command:
+    permission: terribleplugin.permission
