--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ shadowJar {
 repositories {
     mavenCentral()
     maven { url "https://repo.jaims.dev/repository/all" }
+    maven { url "https://jitpack.io" }
 }
 
 processResources {
@@ -29,6 +30,7 @@ processResources {
 
 dependencies {
     implementation "org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT"
+    compile "com.github.ElgarL:groupmanager:2.9"
 
     testCompile group: "junit", name: "junit", version: "4.12"
 }
