--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group "dev.jaims"
-version "0.0.1"
+version "1.0.0-BETA-RC-SNAPSHOT"
 
 shadowJar {
     relocate "org.spigotmc", "dev.jaims.terribleplugin.libs.spigotmc"
@@ -29,7 +29,7 @@ processResources {
 }
 
 dependencies {
-    implementation "org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT"
+    compile "org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT"
     compile "com.github.ElgarL:groupmanager:2.9"
 
     testCompile group: "junit", name: "junit", version: "4.12"
