--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,8 @@ permissions:
 commands:
   command:
     permission: terribleplugin.permission
+  clearchat:
+    description: chat go bye bey
   hello:
     description: hello
   heal:
