--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies({
     compile($/org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT/$)
     compile($/com.github.ElgarL:groupmanager:2.9/$)
     compile(group: $/org.springframework.boot/$, name: $/spring-boot-gradle-plugin/$, version: $/2.4.2/$)
+    compile(group: $/com.zaxxer/$, name: $/HikariCP/$ ,version: "4.0.3")
 
     testCompile(group: "junit", name: "junit", version: "4.12")
 })
