add clear lag command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,8 @@ name: TerriblePlugin
 version: @version@
 main: dev.jaims.terribleplugin.Main
 depend:
-  - GroupManager
+  #- GroupManager
+# Group Manager has been deprecated in favor of Perms EX
 permissions:
   terribleplugin.permission:
     default: true
@@ -16,3 +17,6 @@ commands:
   heal:
     permission: terribleplugin.heal
     description: turns a player to healthy
+  clearlag:
+    description: This command will thoroughly and efficiently remove all aspects of a Minecraft server that may cause undesired "delay"s in game-play performance. This includes, but is not limited to, zombies, creepers, skeletons, players, pigs, cows, ghasts, endermen, and creepers. Feel free to use this command whenever you feel the need to, or alternatively, whenever the server's TPS dips below 20. Thank you for using terrible-plugin!
+    permission: clearlag
